--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "pi_atom"
-version = "0.2.1"
+version = "0.2.3"
 authors = ["zmythleo <zmythleo@gmail.com>"]
 edition = "2021"
 description = "The global thread safe atomic string pool reduces the memory occupation of the same string and is also used for HashMap keys"
@@ -16,8 +16,13 @@ pi_bon = "0.2"
 pi_time = "0.1"
 pi_share = "0.4"
 pi_hash = "0.1"
+fxhash = "0.2.1"
+twox-hash = "1"
 
 [dependencies.serde]
 version = "1.0"
 features = ["serde_derive"]
 optional = true
+
+[features]
+pointer_width_32 = []
