--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "pi_atom"
-version = "0.2.4"
+version = "0.3.0"
 authors = ["zmythleo <zmythleo@gmail.com>"]
 edition = "2021"
 description = "The global thread safe atomic string pool reduces the memory occupation of the same string and is also used for HashMap keys"
@@ -10,18 +10,25 @@ keywords = ["pi",  "atom"]
 
 
 [dependencies]
-fnv = "1.0.6"
+pi_key_alloter = "0.4"
+pi_slot = "0.1"
+pi_null = "0.1"
+dashmap = "5.5"
+smol_str = "0.2"
 lazy_static = "1.4"
-pi_bon = "0.2"
 pi_share = "0.4"
+
+[dev-dependencies]
 pi_hash = "0.1"
 fxhash = "0.2.1"
 twox-hash = "1"
+getrandom = "0.2"
 
 [dependencies.serde]
 version = "1.0"
 features = ["serde_derive"]
 optional = true
+default_features = true
 
 [features]
 pointer_width_32 = []
