--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "pi_atom"
-version = "0.5.0"
+version = "0.5.1"
 authors = ["zmythleo <zmythleo@gmail.com>"]
 edition = "2021"
 description = "The global thread safe atomic string pool reduces the memory occupation of the same string and is also used for HashMap keys"
@@ -30,3 +30,4 @@ default_features = true
 
 [features]
 pointer_width_32 = []
+lookup_by_hash = []
