--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "pi_atom"
-version = "0.2.5"
+version = "0.2.6"
 authors = ["zmythleo <zmythleo@gmail.com>"]
 edition = "2021"
 description = "The global thread safe atomic string pool reduces the memory occupation of the same string and is also used for HashMap keys"
@@ -13,7 +13,7 @@ keywords = ["pi",  "atom"]
 fnv = "1.0.6"
 lazy_static = "1.4"
 pi_bon = "0.2"
-pi_share = "0.4"
+pi_share = "=0.4.11"
 pi_hash = "0.1"
 fxhash = "0.2.1"
 twox-hash = "1"
